# Wagtail-React

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  manage.py  pyproject.toml  requirements_docker.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: mode-toggle.tsx  navbar.tsx
frontend/src/pages/: Blog.tsx  BlogPost.tsx  Home.tsx  Login.tsx
home/: models.py
home/management/commands/: seed.py
home/migrations/: 0003_homepage_body_blogpage.py
home/templates/home/: home_page.html  welcome_page.html
reactpr/: api.py  urls.py
reactpr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reactpr/settings/: base.py  production.py
reactpr/templates/: base.html
theme/static_src/src/: styles.css
