[project]
name = "reactpr"
version = "0.1.0"
description = "A Wagtail CMS project"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
    "Django>=5.2,<5.3",
    "wagtail>=7.2,<7.3",
    "psycopg2-binary>=2.9",
    "dj-database-url>=2.1",
    "django-tailwind[reload]>=3.8.0",
    "django-cors-headers>=4.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reactpr*", "home*", "search*"]
